--- a/frontend/src/components/listuser.css
+++ b/frontend/src/components/listuser.css
@@ -1,10 +1,56 @@
-.listuser{
-    display: inline;
-  top: 192px; 
-  left: 100px; 
-  font-family: Epilogue; /* Heading */
-  font-size: 24px; 
-  line-height: 84px; 
-  font-weight: 700; 
-  color: #171A1FFF;
+.list {
+  padding-top: 5%;
 }
+
+.listuser {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 20px;
+  max-width: 600px;
+  margin: auto;
+}
+
+.user-card {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+.show_username {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.show_email, .show_role ,.show_result{
+  font-size: 14px;
+  margin-bottom: 8px;
+  color: #555;
+}
+
+.result {
+  font-size: 14px;
+  color: #333;
+  margin-top: 10px;
+}
+
+.user-card a {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 15px;
+  background-color: #40d6e7;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.user-card a:hover {
+  background-color: #4f8593;
+} 
+
+ 
