--- a/frontend/src/components/Nav.css
+++ b/frontend/src/components/Nav.css
@@ -112,7 +112,7 @@ ul li{
     top: 70px; 
     left: -160px; 
     width: 186px; 
-    height: 80px;     
+    height: 130px;     
     display: flex; 
     flex-direction: column; 
     font-family: Inter; 
@@ -138,25 +138,26 @@ ul li{
     top: 70px; 
     left: -160px; 
     width: 186px; 
-    height: 130px;     
+    height: 200px;     
     display: flex; 
     flex-direction: column; 
     font-family: Inter; 
-    background-color: rgb(246, 250, 250);
+    background-color: rgb(224, 228, 228);
     font-size: 25px; 
     line-height: 22px;      
     font-weight: 400; 
     opacity: 1; 
+    color: white;
     box-shadow: 0 4px 8px rgba(33, 30, 30, 0.1);
 }
 .admin-dropdown-text{
     font-family: Inter; 
     font-size: 25px; 
-    line-height: 22px; 
-    padding: 8px 12px;
+    line-height: 1px; 
+    padding: 8px 8px;
     cursor: pointer;
     font-weight: 400; 
-    color: rgb(10, 11, 11); 
+    color: rgb(228, 235, 235); 
 }
 .navbar-divider {
     height: 2px; /* Height of the line */
