--- a/frontend/src/components/listuser.css
+++ b/frontend/src/components/listuser.css
@@ -24,14 +24,23 @@
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 8px;
+  display: inline-flex;
 }
 
 .show_email, .show_role ,.show_result{
+  display: flex;
   font-size: 14px;
   margin-bottom: 8px;
   color: #555;
 }
-
+.delete_user{
+  display: inline-flex;
+  font-size: 30px;
+  color: red;  
+  cursor: pointer;  
+  
+ 
+}
 .result {
   font-size: 14px;
   color: #333;
