--- a/frontend/src/components/register.css
+++ b/frontend/src/components/register.css
@@ -1,45 +1,69 @@
-/* src/App.css or src/Register.css */
-
 .register-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .register-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .register-container form div {
-    margin-bottom: 15px;
-  }
-  
-  .register-container form label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .register-container form input {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-  }
-  
-  .register-container form button {
-    width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .register-container form button:hover {
-    background-color: #218838;
-  }
-  
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 28rem;
+  margin: 1rem;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow:gray;
+  border: 1px solid #000000; /* Black */
+  background-color: #FFFFFF; /* White */
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+}
+
+.register-title {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+  color: #000000; /* Black */
+}
+
+.register-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.register-input {
+  padding: 0.75rem;
+  border: 1px solid #000000; /* Black */
+  border-radius: 0.25rem;
+  background-color: #F5F5F5; /* Light Gray (close to white) */
+  color: #000000; /* Black */
+}
+
+.register-button {
+  width: 100%;
+  padding: 0.5rem;
+  border: 2px solid #000000; /* Black */
+  color: #FFFFFF; /* White */
+  border-radius: 0.25rem;
+  background-color: #000000; /* Black */
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.register-button:hover {
+  background-color: #FFFFFF; /* White */
+  color: #000000; /* Black */
+}
+
+.register-message {
+  color: #FF4500;
+  font-size: 0.875rem;
+  text-align: center;
+  margin-top: 1rem;
+}
